@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: pop3d.tcl,v 1.3 2002/09/03 17:13:51 andreas_kupries Exp $
+# RCS: @(#) $Id: pop3d.tcl,v 1.4 2002/09/03 19:27:28 andreas_kupries Exp $
 
 package require md5  ; # tcllib | APOP
 package require mime ; # tcllib | storage callback
@@ -534,6 +534,8 @@ proc ::pop3d::HandleUnknownCmd {name sock cmd line} {
 }
 
 proc ::pop3d::Respond2Client {name sock ok wtext} {
+::log "$name $sock > $ok $wtext"
+
     ::log::log info "$name $sock > $ok $wtext"
     puts $sock                    "$ok $wtext"
     return
@@ -703,6 +705,8 @@ proc ::pop3d::H_stat {name sock cmd line} {
     if {[string equal $cstate(state) auth]} {
 	Respond2Client $name $sock -ERR "client not authenticated"
     } else {
+::log "STAT [array get cstate]"
+
 	# Return number of messages waiting and size of the contents
 	# of the chosen maildrop in octects.
 	Respond2Client $name $sock +OK  "$cstate(msg) $cstate(size)"
@@ -721,6 +725,7 @@ proc ::pop3d::H_dele {name sock cmd line} {
 
     # Called only in places where cstate is known!
     upvar cstate cstate
+::log "DELE [array get cstate]"
 
     if {[string equal $cstate(state) auth]} {
 	Respond2Client $name $sock -ERR "client not authenticated"
@@ -740,6 +745,7 @@ proc ::pop3d::H_dele {name sock cmd line} {
 	Respond2Client $name $sock +OK "message $msgid deleted"
     }
 
+::log "DELE/2 [array get cstate]"
     return
 }
 
@@ -753,6 +759,7 @@ proc ::pop3d::H_retr {name sock cmd line} {
 
     # Called only in places where cstate is known!
     upvar cstate cstate
+::log "RETR [array get cstate]"
 
     if {[string equal $cstate(state) auth]} {
 	Respond2Client $name $sock -ERR "client not authenticated"
@@ -769,6 +776,8 @@ proc ::pop3d::H_retr {name sock cmd line} {
     } else {
 	Transfer $name $sock $msgid
     }
+
+::log "RETR/2 [array get cstate]"
     return
 }
 
@@ -1040,7 +1049,7 @@ proc ::pop3d::Transfer {name sock msgid {limit -1}} {
 	# Full transfer, we can use "copymessage" and avoid
 	# construction in memory (depending on source of token).
 	::mime::copymessage $token $sock
-	puts $sock \n.\n
+	puts $sock .
     } else {
 	# As long as FR #531541 is not implemented we have to build
 	# the entire message in memory and then cut it down to the
